--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "connect-busboy": "0.0.2",
+    "express": "^4.17.1",
+    "fs": "0.0.1-security",
+    "pdf-parse": "^1.1.1"
   }
 }
